# EvoLadderBotBeta

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  debug_2v2_parsing.txt  mypy-errors.txt~  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  run_local.sh  test_2v2_parser.py
.github/wokflows/: ci.yml
.github/workflows/: ci.yml
backend/: bootstrap.py  config.py  railway.json  railway.toml
backend/algorithms/: game_stats.py  leaderboard.py  match_params.py  match_params_2v2.py  matchmaker.py  (+5 more)
bot/: app.py  bootstrap.py  config.py  http.py  main.py  railway.json  railway.toml
channel_manager/: app.py  config.py  database.py  discord_http.py  gateway.py  models.py  railway.json  schema.sql
common/: config.py  datetime_helpers.py  i18n.py  json_types.py  loader.py  protocols.py  referral.py  urls.py
docs/: README.md  TODO.md  TODO_alpha.md  TODO_beta.md  TODO_beta_clean.md  architecture.md  events.md  help.md  implementation_2v2.md  new_features.md  plan.md  plan_2026-04-21.md  plan_2026_04_05.md  plan_2v2.md  plan_non_wave_matchmaking.md  plan_timezones_and_quiet_hours.md  postgres_schema.md  surveys.md  testing.md  triage_2026-04-26.md
misc_scripts/: convert_countries_json.py  convert_maps_json.py  indent_json.py  test_db_integration.py
tests/: conftest.py  test_datetime_helpers.py  test_game_stats.py  test_hungarian.py  test_locale_parity.py  test_match_params.py  test_matchmaker_1v1.py  test_matchmaker_2v2.py  test_ratings.py  test_replay_verifier.py
tos/: tos-enUS.md  tos-esMX.md  tos-koKR.md  tos-ruRU.md  tos-zhCN.md
(+175 files in other folders)
