[project]
name = "evoladderbotbeta"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.3.0",
    "httpx>=0.28.0",
    "matplotlib>=3.9.0",
    "fastapi>=0.135.0",
    "polars>=1.38.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "sc2reader>=1.8.0",
    "structlog>=24.0.0",
    "xxhash>=3.0.0",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[tool.mypy]
# Keep useful stuff, drop the most annoying strict parts
strict = false
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# Silence polars type issues in dataframe schemas
[[tool.mypy.overrides]]
module = "backend.domain_types.dataframes"
disable_error_code = "dict-item"

# Silence checks on miscellaneous modules
[[tool.mypy.overrides]]
module = "misc.*"
ignore_errors = true
